--- a/app/src/main/res/layout/activity_droppable_recycler.xml
+++ b/app/src/main/res/layout/activity_droppable_recycler.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sharebay.vam.edgeui.MainActivity">
-    <ListView
-        android:id="@+id/listSamples"
+    tools:context="com.sharebay.vam.edgeui._modules.part_recyclerview.DroppableRecyclerActivity">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerDrag"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-    </ListView>
-
-</android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.RecyclerView>
+</LinearLayout>
